--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
+    - name: Run tests with Maven
       run: mvn clean test
     - name: Build with Maven
       run: mvn -B package --file pom.xml
